# shopify-csm-agent

./: .env.example  .gitignore  README.md  push.sh  pyproject.toml
deploy/: Caddyfile  Dockerfile  docker-compose.yml
docs/: client_onboarding.md  runbook.md
src/: settings.py
src/agent/: graph.py  llm.py  prompts.py
src/api/: main.py  webhooks.py
src/tools/: shopify.py  slack.py
tests/: test_agent_graph.py
