[project]
name = "shopify-csm-agent"
version = "0.1.0"
description = "Autonomous customer-success agent for Shopify stores."
authors = [{ name = "Eric Mutembei Mwathi", email = "ericmutembei60@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "anthropic>=0.39",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-anthropic>=0.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "redis>=5.0",
    "rq>=1.16",
    "slack-sdk>=3.27",
    "structlog>=24.1",
    "tenacity>=8.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
csm-agent = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
